--- a/main.css
+++ b/main.css
@@ -38,7 +38,6 @@ header li a {
 }
 
 .articles article img {
-    /*height: 180px;*/
     width: 100%;
 }
 
@@ -101,4 +100,20 @@ section h2,
 
 #economy .articles article a {
     background-color: #ff9f1a;
+}
+
+#entertainment {
+    background-color: rgba(255, 0, 0, 0.2);
+}
+
+#entertainment .articles article a{
+    background-color: #940000;
+}
+
+#tech {
+    background-color: #74018b65;
+}
+
+#tech .articles article a {
+    background-color: #7d1aff;
 }
